# jleg

./: CMakeLists.txt  LICENSE.txt  README.md
include/jleg/: jleg.cpp  jleg.hpp
res/configs/: config.json
res/scenes/: test.json  tiles.data
res/shaders/: debug.frag  debug.vert  sprite.frag
samples/test/: CMakeLists.txt  main.cpp  player.cpp  player.hpp  test.cpp  test.hpp
src/debug/: CMakeLists.txt  log.cpp  log.hpp  logger.cpp  logger.hpp
src/game/: CMakeLists.txt  game.hpp
src/io/: CMakeLists.txt  input.cpp  input.hpp  io.hpp  json_reader.cpp  json_reader.hpp
src/math/: CMakeLists.txt  math.cpp  math.hpp  transform.hpp  vec2.cpp  vec2.hpp  vec2i.cpp  vec2i.hpp
src/physics/: CMakeLists.txt  physics.cpp  physics.hpp
src/scene/: CMakeLists.txt  camera.cpp  camera.hpp  character_body.cpp  character_body.hpp  node.cpp  node.hpp  scene.hpp  scene_graph.cpp  scene_graph.hpp  sprite.cpp  sprite.hpp  static_body.cpp  static_body.hpp  tilemap.cpp  tilemap.hpp
src/visuals/: CMakeLists.txt  draw_queue.hpp  shader.cpp  shader.hpp  sprite_drawer.cpp  sprite_drawer.hpp  texture.cpp  texture.hpp  visuals.cpp  visuals.hpp
